; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/vm/extr_nv50.c_nv50_vm_map_sg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/vm/extr_nv50.c_nv50_vm_map_sg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_vma = type { i32 }
%struct.nouveau_gpuobj = type { i32 }
%struct.nouveau_mem = type { i32 }

@NV_MEM_ACCESS_NOSNOOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nouveau_vma*, %struct.nouveau_gpuobj*, %struct.nouveau_mem*, i32, i32, i32*)* @nv50_vm_map_sg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nv50_vm_map_sg(%struct.nouveau_vma* %0, %struct.nouveau_gpuobj* %1, %struct.nouveau_mem* %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca %struct.nouveau_vma*, align 8
  %8 = alloca %struct.nouveau_gpuobj*, align 8
  %9 = alloca %struct.nouveau_mem*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.nouveau_vma* %0, %struct.nouveau_vma** %7, align 8
  store %struct.nouveau_gpuobj* %1, %struct.nouveau_gpuobj** %8, align 8
  store %struct.nouveau_mem* %2, %struct.nouveau_mem** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  %15 = load %struct.nouveau_vma*, %struct.nouveau_vma** %7, align 8
  %16 = getelementptr inbounds %struct.nouveau_vma, %struct.nouveau_vma* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @NV_MEM_ACCESS_NOSNOOP, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  %21 = zext i1 %20 to i64
  %22 = select i1 %20, i32 3, i32 2
  store i32 %22, i32* %13, align 4
  %23 = load i32, i32* %10, align 4
  %24 = shl i32 %23, 3
  store i32 %24, i32* %10, align 4
  br label %25

25:                                               ; preds = %29, %6
  %26 = load i32, i32* %11, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* %11, align 4
  %28 = icmp ne i32 %26, 0
  br i1 %28, label %29, label %53

29:                                               ; preds = %25
  %30 = load %struct.nouveau_vma*, %struct.nouveau_vma** %7, align 8
  %31 = load i32*, i32** %12, align 8
  %32 = getelementptr inbounds i32, i32* %31, i32 1
  store i32* %32, i32** %12, align 8
  %33 = load i32, i32* %31, align 4
  %34 = load %struct.nouveau_mem*, %struct.nouveau_mem** %9, align 8
  %35 = getelementptr inbounds %struct.nouveau_mem, %struct.nouveau_mem* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %13, align 4
  %38 = call i32 @vm_addr(%struct.nouveau_vma* %30, i32 %33, i32 %36, i32 %37)
  store i32 %38, i32* %14, align 4
  %39 = load %struct.nouveau_gpuobj*, %struct.nouveau_gpuobj** %8, align 8
  %40 = load i32, i32* %10, align 4
  %41 = add nsw i32 %40, 0
  %42 = load i32, i32* %14, align 4
  %43 = call i32 @lower_32_bits(i32 %42)
  %44 = call i32 @nv_wo32(%struct.nouveau_gpuobj* %39, i32 %41, i32 %43)
  %45 = load %struct.nouveau_gpuobj*, %struct.nouveau_gpuobj** %8, align 8
  %46 = load i32, i32* %10, align 4
  %47 = add nsw i32 %46, 4
  %48 = load i32, i32* %14, align 4
  %49 = call i32 @upper_32_bits(i32 %48)
  %50 = call i32 @nv_wo32(%struct.nouveau_gpuobj* %45, i32 %47, i32 %49)
  %51 = load i32, i32* %10, align 4
  %52 = add nsw i32 %51, 8
  store i32 %52, i32* %10, align 4
  br label %25

53:                                               ; preds = %25
  ret void
}

declare dso_local i32 @vm_addr(%struct.nouveau_vma*, i32, i32, i32) #1

declare dso_local i32 @nv_wo32(%struct.nouveau_gpuobj*, i32, i32) #1

declare dso_local i32 @lower_32_bits(i32) #1

declare dso_local i32 @upper_32_bits(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
